[gd_scene load_steps=6 format=3 uid="uid://b82f1h5dy54rx"]

[ext_resource type="Script" uid="uid://b7nfsk8l6n7aj" path="res://scripts/spells/spellsystem/spell_container.gd" id="1_w1h6g"]
[ext_resource type="Theme" uid="uid://qw5wdr2jerv7" path="res://Art/text/default_font.tres" id="2_vgyca"]
[ext_resource type="Texture2D" uid="uid://7e64hhcudbus" path="res://Art/spell elements/puyo-spellContainer.png" id="2_w1h6g"]
[ext_resource type="Texture2D" uid="uid://dqohymee1bv55" path="res://Placeholder Art/puyo_pop.png" id="6_n2pxk"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_biiyc"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)

[node name="SpellContainer" type="Control"]
layout_mode = 3
anchor_right = 0.234
anchor_bottom = 0.114
offset_right = 0.199982
offset_bottom = -6.10352e-05
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_w1h6g")

[node name="SpellFrame" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.043
anchor_bottom = 0.975
offset_right = -0.0830078
offset_bottom = -0.0349426
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_w1h6g")
expand_mode = 1

[node name="SpellFrame" type="ColorRect" parent="SpellFrame"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0.305882, 0.556863)

[node name="SpellGraphic" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.05
anchor_right = 0.98
anchor_bottom = 0.4
offset_left = 0.380001
offset_top = 5.87
offset_right = -8.37997
offset_bottom = -0.0399742

[node name="SpellGraphic" type="ColorRect" parent="SpellGraphic"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.32549, 0.0431373, 0.470588)

[node name="SpellName" type="RichTextLabel" parent="SpellGraphic"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.841
anchor_bottom = 0.9
offset_left = 8.95
offset_top = -4.0
offset_right = 8.95
offset_bottom = -4.0
theme = ExtResource("2_vgyca")
text = "Spell Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RecipeContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.126
anchor_top = 0.362
anchor_right = 0.814
anchor_bottom = 0.827
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="TestParticleEffect" type="GPUParticles2D" parent="."]
position = Vector2(281, 52)
emitting = false
amount = 1
texture = ExtResource("6_n2pxk")
one_shot = true
process_material = SubResource("ParticleProcessMaterial_biiyc")
